--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "2.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "babel-preset-expo": "^5.0.0"
   },
   "private": true,
