--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "rn-easy-hybrid",
-    "slug": "rn-easy-hybrid",
+    "name": "rn-easy-hybrid-jan2019",
+    "slug": "rn-easy-hybrid-jan2019",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
